<resources>
    <string name="app_name">AB &amp; Modbus Master</string>
    <string name="btnOK">OK</string>
    <string name="btnGauge">Gauge</string>
    <string name="btnGaugeDemo">Gauge Demo</string>
    <string name="btnGetTags">Get Tags</string>
    <string name="btnWrite">Write</string>
    <string name="btnClearABTags">Clear AB Tags</string>
    <string name="btnClearMBTags">Clear MB Tags</string>
    <string name="btnScreenClean">Screen Clean</string>
    <string name="btnABAutoON">AB Auto ON</string>
    <string name="btnABAutoOFF">AB Auto OFF</string>
    <string name="btnMBAutoON">MB Auto ON</string>
    <string name="btnMBAutoOFF">MB Auto OFF</string>
    <string name="tvIO">I / O</string>
    <string name="tvAddress">Address</string>
    <string name="tvDataType">Data Type</string>
    <string name="tvPLCAddress">PLC Tag / Address</string>
    <string name="labelBoolDisplay">Bit/Bool Display</string>
    <string name="labelBit">Bit/Char</string>
    <string name="labelBitPID">Bit / Word</string>
    <string name="labelCustomStringLength">Custom String Length</string>
    <string name="labelStringLength">String Length</string>
    <string name="labelABPLCCPU">PLC / CPU</string>
    <string name="labelABIPAddress">IP Address</string>
    <string name="labelABPath">Path</string>
    <string name="labelTimeout">Timeout</string>
    <string name="labelMBPLCCPU">PLC / CPU</string>
    <string name="labelMBIPAddress">IP Address</string>
    <string name="labelMBUnitID">UnitID</string>
    <string name="LGXProgram">MainProgram</string>
    <string name="LGXProgramHint">Program Name</string>
    <string name="LGXIPAddress">192.168.1.21</string>
    <string name="LGXIPAddressHint">IP Address</string>
    <string name="LGXPath">1,3</string>
    <string name="LGXPathHint">CSV</string>
    <string name="ModbusIPAddress">192.168.1.20</string>
    <string name="ModbusPLCAddress">0</string>
    <string name="ModbusPLCAddressHint">Unsigned Short</string>
    <string name="tagHint">Tag</string>
    <string name="gaugeTagHint">Gauge Tag</string>
    <string name="WriteHint">Read / Write</string>
    <string name="timeout">10000</string>
    <string name="timeoutHint">Positive Number</string>
    <string name="unitID">1</string>
    <string name="unitIDHint">1 to 247</string>
    <string name="checkboxSwapBytes">Swap Bytes</string>
    <string name="checkboxSwapWords">Swap Words</string>
    <string name="libplctagVersionHint">libplctag v</string>
    <string name="platformArchHint">Platform Arch</string>
    <string-array name="ab_tags">
        <item>Controller + Program Tags</item>
    </string-array>
    <string-array name="ab_tags_please_wait">
        <item>Please wait…</item>
    </string-array>
    <string-array name="ab_cpu">
        <item>controllogix</item>
        <item>logixpccc</item>
        <item>micro800</item>
        <item>micrologix</item>
        <item>slc500</item>
        <item>plc5</item>
        <item>njnx</item>
    </string-array>
    <string-array name="ab_data_type">
        <item>int8</item>
        <item>uint8</item>
        <item>int16</item>
        <item>uint16</item>
        <item>int32</item>
        <item>uint32</item>
        <item>int64</item>
        <item>uint64</item>
        <item>float32</item>
        <item>float64</item>
        <item>bool</item>
        <item>bool array</item>
        <item>string</item>
        <item>custom string</item>
        <item>timer</item>
        <item>counter</item>
        <item>control</item>
    </string-array>
    <string-array name="ab_mlgx_data_type">
        <item>int8</item>
        <item>uint8</item>
        <item>int16</item>
        <item>uint16</item>
        <item>int32</item>
        <item>uint32</item>
        <item>int64</item>
        <item>uint64</item>
        <item>int128</item>
        <item>uint128</item>
        <item>float32</item>
        <item>float64</item>
        <item>string</item>
        <item>timer</item>
        <item>counter</item>
        <item>control</item>
        <item>pid</item>
    </string-array>
    <string-array name="ab_slcplc5_data_type">
        <item>int8</item>
        <item>uint8</item>
        <item>int16</item>
        <item>uint16</item>
        <item>int32</item>
        <item>uint32</item>
        <item>int64</item>
        <item>uint64</item>
        <item>int128</item>
        <item>uint128</item>
        <item>float32</item>
        <item>float64</item>
        <item>string</item>
        <item>timer</item>
        <item>counter</item>
        <item>control</item>
    </string-array>
    <string-array name="pid_bits_words">
        <item>None</item>
        <item>TM</item>
        <item>AM</item>
        <item>CM</item>
        <item>OL</item>
        <item>RG</item>
        <item>SC</item>
        <item>TF</item>
        <item>DA</item>
        <item>DB</item>
        <item>UL</item>
        <item>LL</item>
        <item>SP</item>
        <item>PV</item>
        <item>DN</item>
        <item>EN</item>
        <item>SPS</item>
        <item>KC</item>
        <item>Ti</item>
        <item>TD</item>
        <item>MAXS</item>
        <item>MINS</item>
        <item>ZCD</item>
        <item>CVH</item>
        <item>CVL</item>
        <item>LUT</item>
        <item>SPV</item>
        <item>CVP</item>
    </string-array>
    <string-array name="gauge_data_type">
        <item>int8</item>
        <item>uint8</item>
        <item>int16</item>
        <item>uint16</item>
        <item>int32</item>
        <item>uint32</item>
        <item>int64</item>
        <item>uint64</item>
        <item>float32</item>
        <item>float64</item>
    </string-array>
    <string-array name="modbus">
        <item>modbus</item>
    </string-array>
    <string-array name="modbusAddress">
        <item>CO</item>
        <item>DI</item>
        <item>IR</item>
        <item>HR</item>
    </string-array>
    <string-array name="modbusGaugeAddress">
        <item>IR</item>
        <item>HR</item>
    </string-array>
    <string-array name="modbus_data_type_bool">
        <item>bool</item>
    </string-array>
    <string-array name="modbus_data_type">
        <item>int8</item>
        <item>uint8</item>
        <item>int16</item>
        <item>uint16</item>
        <item>int32</item>
        <item>uint32</item>
        <item>int64</item>
        <item>uint64</item>
        <item>int128</item>
        <item>uint128</item>
        <item>float32</item>
        <item>float64</item>
        <item>string</item>
    </string-array>
    <string-array name="bits_8bit">
        <item>None</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="bits_16bit">
        <item>None</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="bits_32bit">
        <item>None</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="bits_64bit">
        <item>None</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
    </string-array>
</resources>