<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupABLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".PopUpAddressAB">

    <TextView
        android:id="@+id/labelCustomStringLength"
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:text="@string/labelCustomStringLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etABtag" />

    <Spinner
        android:id="@+id/spinnerABBit"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:entries="@array/bits_8bit"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:popupBackground="@android:color/holo_green_dark"
        app:layout_constraintStart_toEndOf="@+id/spinnerABDataType"
        app:layout_constraintTop_toBottomOf="@+id/labelABBit" />

    <TextView
        android:id="@+id/labelABBit"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:text="@string/labelBit"
        app:layout_constraintStart_toEndOf="@+id/labelABDataType"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelABDataType"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:text="@string/tvDataType"
        app:layout_constraintStart_toEndOf="@+id/labelPLCTagAddress"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etABtag"
        android:layout_width="280dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:hint="@string/tvPLCAddress"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPLCTagAddress" />

    <Spinner
        android:id="@+id/spinnerABDataType"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:entries="@array/ab_data_type"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:popupBackground="@android:color/holo_green_dark"
        app:layout_constraintStart_toEndOf="@+id/etABtag"
        app:layout_constraintTop_toBottomOf="@+id/labelABDataType" />

    <TextView
        android:id="@+id/labelPLCTagAddress"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:text="@string/tvPLCAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnABOK"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="35dp"
        android:onClick="sendMessageReturnTag"
        android:text="@string/btnOK"
        app:layout_constraintStart_toEndOf="@+id/spinnerABBit"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCustomStringLength"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="14dp"
        android:background="@android:color/holo_green_dark"
        android:entries="@array/str_length"
        android:popupBackground="@android:color/holo_green_dark"
        app:layout_constraintStart_toEndOf="@+id/labelCustomStringLength"
        app:layout_constraintTop_toBottomOf="@+id/spinnerABDataType" />

</androidx.constraintlayout.widget.ConstraintLayout>